--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   --twitter-color: #50b7f5;
   --twitter-background: #e6ecf0;
   --twitter-sidebar-hover-background: #e6ecf0;
+  --twitter-widgets-container-background: #f5f8fa;
 }
 
 .app {
