--- a/src/components/widgets/Widgets.css
+++ b/src/components/widgets/Widgets.css
@@ -1,3 +1,30 @@
 .widgets {
   flex: 0.3;
 }
+
+.widgets-input {
+  display: flex;
+  align-items: center;
+  background-color: var(--twitter-background);
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.widgets-input > input {
+  border: none;
+  background-color: var(--twitter-background);
+}
+
+.search-icon {
+  color: gray;
+}
+
+.widgets-container {
+  margin-top: 15px;
+  margin-left: 20px;
+  padding: 20px;
+  background-color: var(--twitter-widgets-container-background);
+  border-radius: 20px;
+}
