--- a/src/components/widgets/Widgets.css
+++ b/src/components/widgets/Widgets.css
@@ -28,3 +28,9 @@
   background-color: var(--twitter-widgets-container-background);
   border-radius: 20px;
 }
+
+@media (max-width: 1200px) {
+  .widgets {
+    display: none;
+  }
+}
